tests/machine/x/cobol/if_then_else.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/if_then_else.cob:7: warning: value size exceeds data size [-Wothers]
/workspace/mochi/tests/machine/x/cobol/if_then_else.cob:12: warning: 'literal "yes"' is not a numeric value [-Wignored-error]
/workspace/mochi/tests/machine/x/cobol/if_then_else.cob:14: error: 'literal "no"' is not a numeric value

