tests/machine/x/cobol/if_then_else.cob
*> Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. IF-THEN-ELSE.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 X PIC 9 VALUE 12.
       01 MSG PIC 9.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       IF X > 10
           COMPUTE TMP = "yes"
       ELSE
           COMPUTE TMP = "no"
       END-IF
       COMPUTE MSG = TMP
       DISPLAY MSG
       STOP RUN.
